# gnu-assemler

./: .gitignore  README.md
assembler/: .gitignore  Makefile  test.s
assembler/include/: assembler.h  assembler.hpp  instruction.hpp  lexer.hpp  log.hpp  operand.hpp  parser.hpp  structures.hpp
assembler/src/: assembler.cpp  instruction.cpp  izlaz.txt  lexer.cpp  lexer.l  log.cpp  main.cpp  operand.cpp  parser.cpp  parser.y  structures.cpp
common/: Makefile  main.cpp
common/include/: enum.h  instruction.h  log.h  memory.h  operand.h  program.h  program_info.h  relocation.h  relocation_link.h  section.h  section_link.h  structures.h  symbol.h  symbol_link.h  symbol_list.h
common/src/: enum.cpp  instruction.cpp  memory.cpp  operand.cpp  ostreamDef.cpp  program.cpp  program_info.cpp  relocaion.cpp  relocation_link.cpp  section.cpp  section_link.cpp  structures.cpp  symbol.cpp  symbol_link.cpp  symbol_list.cpp
emulator/: CMakeLists.txt  Makefile  main.cpp
emulator/include/: emulator.h  emulator.hpp  program.h  program.hpp
emulator/src/: emulator.cpp  main.cpp  program.cpp
linker/: CMakeLists.txt  Makefile  main.cpp
linker/include/: linker.h  loader_script_file.h  object_file.h  program_file.h
linker/src/: linker.cpp  loader_script_file.cpp  main.cpp  object_file.cpp  program_file.cpp
linker_new/: Makefile
linker_new/include/: linker.h  object_file.h  types.h
linker_new/src/: linker.cpp  main.cpp  object_file.cpp
test/: handler.s  isr_terminal.s  isr_timer.s  main.s  start.sh  test.s  test1.s  test2.s
test/nivo-a/: math.s
test/nivo-b/: start.sh
(+3 files in other folders)
